tests/e2e/pass/v4_exit_return_path.ep
# EXIT: 7
fun main(): void {
    exit(7)
}
