tests/e2e/fail/v2_panic.ep
# EXIT: 1
# STDOUT: panic line 4: boom
fun main(): void {
    panic "boom"
}
